--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "eslint": "^8.4.1"
   },
   "name": "konplus",
-  "version": "1.0.0",
+  "version": "0.0.1-Alpha",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": ""
 }
