--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "nodemon": "^2.0.15"
   },
   "name": "konplus",
-  "version": "0.0.1-Alpha",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
